menu toggler issue was cut of on smaller screen, now fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ html {
   font-size: 3em;
   text-align: right;
   line-height: 1em;
-  padding: 0 1rem;
+  padding: 1rem 1rem;
   color:  #FFB6C1;
   z-index:  6;
 }
